--- a/src/styles/_partners.scss
+++ b/src/styles/_partners.scss
@@ -32,7 +32,7 @@
     margin-top: -2rem;
   }
   h3.quote {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     margin-top: 2.7rem;
     margin-bottom: 2rem;
     padding-left: 1rem;
@@ -161,19 +161,77 @@
   }
 }
 
+@media (min-width: 500px) {
+  section.header-image-partner {
+    p.header {
+      font-size: 5rem;
+      margin-top: 8rem;
+      margin-bottom: 2rem;
+    }
+    p.header-text {
+      font-size: 2.8rem;
+      margin-left: 3rem;
+      margin-right: 3rem;
+      margin-top: 0rem;
+      margin-bottom: 1rem;
+    }
+  }
+  h3.quote {
+    font-size: 2.6rem;
+    margin-top: 2.7rem;
+    margin-bottom: 2rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+  h1.repeating-h1 {
+    font-size: 3.4rem;
+    font-weight: 700;
+    margin-top: 2rem;
+  }
+  h2.repeating-h2 {
+    font-size: 2.4rem;
+    font-weight: normal;
+    margin-top: 0.5rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
+    line-height: 3rem;
+  }
+  h5.partner-card-title {
+    font-size: 2.4rem;
+    line-height: 3rem;
+    margin-left: 0.15rem;
+    margin-right: 0.15rem;
+  }
+  p.partner-card-text {
+    font-family: "Raleway", sans-serif;
+    display: block;
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+  div.rounded-circle {
+    position: relative;
+    width: 20rem;
+    height: 20rem;
+    padding: 2rem;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    margin-top: 2rem;
+    background-color: #e2f0ef !important;
+  }
+}
+
 // Tablet
 @media (min-width: 768px) {
   // Header Image
   section.header-image-partner {
     p.header {
-      font-size: 6rem;
+      font-size: 5rem;
+      margin-top: 15rem;
       margin-bottom: 2rem;
-      line-height: 4.5rem;
     }
 
     p.header-text {
-      font-size: 3.2rem;
-      font-weight: 400;
+      font-size: 2.8rem;
       margin-left: 3rem;
       margin-right: 3rem;
       margin-top: 0rem;
@@ -187,7 +245,7 @@
     margin-top: -2.5rem;
   }
   h3.quote {
-    font-size: 3rem;
+    font-size: 2.6rem;
     margin-top: 2.7rem;
     margin-bottom: 2rem;
     padding-left: 6rem;
@@ -208,20 +266,21 @@
     line-height: 3rem;
   }
   // Grid Carousel Inner
-  .partner-card-title {
+  h5.partner-card-title {
     font-size: 2.4rem;
     line-height: 3rem;
     margin-left: 0.15rem;
     margin-right: 0.15rem;
   }
-  .partner-card-text {
-    display: contents;
+  p.partner-card-text {
+    font-family: "Raleway", sans-serif;
+    display: block;
     font-size: 1.6rem;
     line-height: 2rem;
   }
   // Carousel Controls
-  .filled-circle {
-    display: contents;
+  button.filled-circle {
+    display: none;
   }
 
   // Carousel touch points
@@ -247,9 +306,8 @@
   // Accordions
   .accordion-partners {
     div.accordion-body {
-      margin-top: -4rem;
-      width: 24rem;
-      border-radius: 0rem 0rem 4.3rem 4.3rem;
+      margin-top: -3rem;
+      width: 19rem;
     }
     p.text-accordion {
       font-size: 1.4rem;
@@ -259,15 +317,13 @@
       padding-right: 1rem;
     }
     h2.accordion-header {
-      .button-accordion {
-        font-size: 1.8rem;
+      button.button-accordion {
+        font-size: 1.6rem;
         margin-top: 1rem;
-        border: none;
-        border-radius: 4.3rem;
-        color: white;
         height: 5rem;
-        width: 18rem;
-        line-height: 2.1rem;
+        width: 19rem;
+        line-height: 2.2rem;
+        margin-left: 0rem;
       }
 
       i.plus-icon-partners {
@@ -286,6 +342,53 @@
     i.right-arrow-bottom-circles {
       margin-top: 2rem;
       margin-right: 1rem;
+    }
+  }
+}
+// large tablet/small desktop
+@media (min-width: 1024px) {
+  section.header-image-partner {
+    min-height: 40vw;
+    p.header {
+      font-size: 6rem;
+      margin-bottom: 1rem;
+    }
+    p.header-text {
+      font-size: 3rem;
+      margin: 2rem 9.5rem 11.3rem 9.5rem;
+    }
+  }
+  h2.repeating-h2 {
+    margin-left: 10rem;
+    margin-right: 10rem;
+    line-height: 3.4rem;
+  }
+  h5.partner-card-title {
+    font-size: 3.5rem;
+    line-height: 4.2rem;
+    margin-bottom: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  p.partner-card-text {
+    display: contents;
+    font-family: "Raleway", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+    padding-bottom: 1rem;
+  }
+  .carousel-indicators {
+    .filled-circle {
+      display: block;
+      border-radius: 100%;
+      width: 1.2rem !important;
+      height: 1.2rem !important;
+      background-color: gray !important;
+    }
+    .filled-circle.active {
+      display: block;
+      background-color: #024a63 !important;
     }
   }
 }
@@ -317,7 +420,7 @@
   // ORANGE BUTTON
   button.learn-how-partners {
     padding: 0.5rem 3.5rem;
-    margin-top: -3rem;
+    margin-top: -2rem;
     background: #ff7c5c;
     border: 0rem solid white;
     color: white;
@@ -331,7 +434,7 @@
   // Quote Block
   h3.quote {
     color: #024a63;
-    margin-top: 3.7rem;
+    margin-top: 3.5rem;
     margin-bottom: 4.8rem;
     font-family: "Cabin", sans-serif;
     font-size: 4rem;
@@ -377,14 +480,13 @@
     margin-left: 2.4rem;
     margin-right: 2.4rem;
   }
-
-  p.partner-card-text {
+  .partner-card-text {
     display: contents;
     font-family: "Raleway", sans-serif;
     font-size: 2rem;
     font-weight: 400;
-    padding-bottom: 1rem;
   }
+
   button.carousel-control-next {
     width: 50%;
     height: 5rem;
@@ -409,14 +511,15 @@
     }
   }
   .carousel-indicators {
-    display: block;
-    .button.filled-circle {
+    .filled-circle {
+      display: block;
       border-radius: 100%;
       width: 1.2rem !important;
       height: 1.2rem !important;
       background-color: gray !important;
     }
-    .button.filled-circle.active {
+    .filled-circle.active {
+      display: block;
       background-color: #024a63 !important;
     }
   }
@@ -453,24 +556,25 @@
     p.text-accordion {
       background-color: #e2f0ef;
       font-family: "Raleway", sans-serif;
-      font-size: 2.3rem;
+      font-size: 2rem;
       font-weight: 500;
       padding-top: 4rem;
       padding-left: 1.6rem;
       padding-right: 1.6rem;
     }
     h2.accordion-header {
-      .button-accordion {
+      button.button-accordion {
         font-family: "Cabin", sans-serif;
-        font-size: 2.5rem;
+        font-size: 2.4rem;
+        line-height: 2.6rem;
         font-weight: 600;
         background-color: #024a63;
+        height: 7.4rem;
+        width: 32.4rem;
         margin-top: 2.4rem;
         border: none;
         border-radius: 4.3rem;
         color: white;
-        height: 7.4rem;
-        width: 32.4rem;
         position: relative;
       }
 
