--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -9,16 +9,16 @@ section.header-image-about {
   background-position: center;
 }
 
-.header-about {
+p.header-about {
   font-family: "Cabin", sans-serif;
-  font-size: 6.5rem;
+  font-size: 5.5rem;
   font-weight: 700;
   margin-top: 9.2rem;
 }
 
-.header-text-about {
+p.header-text-about {
   font-family: "Cabin", sans-serif;
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 400;
   padding: 2.8rem 8rem 11.3rem 8rem;
 }
@@ -266,28 +266,210 @@ section.header-image-about {
   margin-top: -2.5rem;
   margin-bottom: 0.5rem !important;
 }
-
-
-
-//iPad Screen
-@media screen and (min-width: 500px) and (max-width: 768px) {
+//iPhone and mobile devices
+@media all and (min-width: 320px) and (max-width: 499px) {
   section.header-image-about {
-    min-height: 50vh;
+    min-height: 60vh !important;
+    background: url("../imgs/aboutus/header1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    p.header-about {
+      font-size: 4rem !important;
+      font-weight: 700 !important;
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
+      line-height: 4.5rem;
+    }
+    p.header-text-about {
+      font-size: 2rem !important;
+      font-weight: 400;
+      margin-left: 2rem !important;
+      margin-right: 2rem !important;
+      margin-top: 0rem;
+      margin-bottom: 1rem;
+    }
+  }
+  .repeating-h1-about {
+    font-size: 3.2rem !important;
+    font-weight: bold;
+    margin-top: 3rem;
+  }
+  .repeating-h1-1-about {
+    font-size: 3.5rem !important;
+    font-weight: 700;
+    margin-top: 3rem;
+    margin-left: 4rem;
+    margin-bottom: 3rem;
+    padding-top: 2rem;
+  }
+  .repeating-h2-about {
+    font-size: 1rem !important;
+    margin-top: 1rem !important;
+    margin-bottom: 3rem !important;
+    text-align: center;
+  }
+  .repeating-h2-name {
+    font-size: 1.5rem !important;
+    margin-top: -2.75rem !important;
+    line-height: 3rem !important;
+  } 
+  .repeating-h2-iggy {
+    color: #024a63;
+    padding-top: 4rem;
+    font-family: "Cabin", sans-serif;
+    font-size: 2rem !important;
+    font-weight: 600;
+    margin-top: -3rem !important;
+    margin-bottom: 3rem;
+  }
+  .repeating-h3-iggy {
+    color: #024a63;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    font-family: "Cabin", sans-serif;
+    font-size: 1.5rem !important;
+    font-weight: normal;
+    font-style: normal;
+    margin-top: -3rem !important;
+    margin-bottom: 6rem;
+    margin-left: 2rem !important;
+    margin-right: 2rem !important;
+  }
+  .repeating-h3-about {
+    font-size: 0.85rem !important;
+    margin-top: -3.5rem !important;
+    margin-bottom: 0.5rem !important;
+  }
+  .h3-about {
+    padding-top: 0rem;
+    padding-bottom: 1rem !important;
+    margin-top: -3rem !important;
+    font-size: 1.1rem !important;
+    padding-left: 0.8rem;
+  }
+  .h3-description {
+    font-size: 1rem !important;
+    font-weight: normal;
+    font-style: normal;
+  }
+  .repeating-h3-team {
+    color: #024a63;
+    padding-top: 0.4rem;
+    font-family: "Cabin", sans-serif;
+    font-size: 1.3rem !important;
+    font-weight: normal;
+    font-style: normal;
+    margin-top: -2.5rem;
+    margin-bottom: 3rem;
+    padding-left: 1rem;
+  }
+  .button-accordion-about {
+  font-size: 0.75rem !important;
+  padding: 1rem 1rem 1rem 1rem !important;
+  width: 5rem !important;
+  height: 2.2rem !important;
+  outline: none !important;
+  border: 0rem solid white !important;
+  border-radius: 5rem !important;
+  text-align: center;
+
+  margin-top: -5rem !important;
+  margin-bottom: -5rem !important;
+  margin-left: -2rem !important;
+  margin-right: -2rem !important;
+  }
+  .container-about {
+    width: 30rem !important;
+    margin: auto !important;
+  }
+  .container-2 {
+    width: 30rem !important;
+    height: 35rem !important;
+    left: 5px;
+    top: 1618px;
+    text-align: left;
+    background: #ffffff;
+    border: 1px solid #024a63;
+    box-sizing: border-box;
+    margin: auto !important;
+    border-radius: 58px;
+  }
+  .col-sm {
+    width: 100px !important;
+  }
+  .col-md {
+    width: 100px !important;
+  }
+  .rounded-circle-team{
+    margin-left: 0.4rem !important;
+  }
+  .col-4 {
+    display: none !important;
+  }
+  .col-8 {
+    width: 100% !important;
+    height: 100% !important;
+    margin-left: 0.5rem;
+  }
+  .interview {
+    padding: 0rem 2rem !important;
+    margin-top: -6rem !important;
+    margin-left: 3rem !important;
+    font-size: 0.8rem !important;
+    height: 2rem !important;
+  }
+  .bi-instagram {
+    font-size: 1.5rem !important;
+    margin-left: 15rem !important;
+    margin-top: -2.75rem !important;
+  }
+  .bi-facebook {
+    margin-left: 1rem !important;
+    font-size: 1.75rem !important;
+    margin-top: -2.75rem !important;
+  }
+  .h3-description {
+    font-size: 1rem !important;
+    padding-right: 1rem !important;
+    padding-left: 0.5rem !important;
+    margin-bottom: -2rem !important;
+  } 
+  .list {
+    margin-top: -1rem !important;
+  }
+  .il {
+    font-size: 0.9rem !important;
+    line-height: 1.2rem !important;
+    margin-top: 0rem !important;
+    padding-right: 0.1rem;
+    margin-left: -1.1rem;
+  }
+  .rounded {
+    margin-top: 5rem;
+    width: 30% !important;
+  }
+}
+//iPad Screen
+@media all and (min-width: 500px) and (max-width: 768px) {
+  section.header-image-about {
+    min-height: 50vh !important;
     background: url("../imgs/aboutus/header1.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     p.header-about {
       font-size: 5rem !important;
-      margin-top: 6rem;
+      margin-top: 6rem !important;
       margin-bottom: 0rem;
     }
     p.header-text-about {
       font-size: 2.8rem !important;
-      margin-left: 3rem;
-      margin-right: 3rem;
+      margin-left: 3rem !important;
+      margin-right: 3rem !important;
       margin-top: 0rem;
-      margin-bottom: 5rem;
+      margin-bottom: 5rem !important;
     }
   }
   .learn-how-about {
@@ -343,6 +525,8 @@ section.header-image-about {
     font-style: normal;
     margin-top: -3rem !important;
     margin-bottom: 6rem;
+    margin-left: 3rem !important;
+    margin-right: 3rem !important;
   }
   .repeating-h3-about {
     font-size: 0.85rem !important;
@@ -445,7 +629,7 @@ section.header-image-about {
     margin-top: -2rem !important;
   }
   .il {
-    font-size: 1.2rem !important;
+    font-size: 1.1rem !important;
     line-height:1.6rem;
     margin-top: 0rem !important;
     padding-right: 0.1rem;
@@ -457,25 +641,25 @@ section.header-image-about {
   }
 }
 //Large Screens: Ipad Pro and Desktop
-@media screen and (min-width: 769px) and (max-width: 1280px) {
+@media all and (min-width: 769px) and (max-width: 1280px) {
   section.header-image-about {
-    min-height: 50vh;
+    min-height: 50vh !important;
     background: url("../imgs/aboutus/header1.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     p.header-about {
-      font-size: 5rem !important;
-      margin-top: 6rem;
+      font-size: 5.5rem !important;
+      margin-top: 6rem !important;
       margin-bottom: 0rem;
     }
 
     p.header-text-about {
-      font-size: 2.8rem !important;
-      margin-left: 3rem;
-      margin-right: 3rem;
-      margin-top: 0rem;
-      margin-bottom: 4rem;
+      font-size: 3rem !important;
+      margin-left: 3rem !important;
+      margin-right: 3rem !important;
+      margin-top: 0rem !important;
+      margin-bottom: 4rem !important;
     }
   }
   .repeating-h2-about {
@@ -497,6 +681,8 @@ section.header-image-about {
     font-style: normal;
     margin-top: -2.5rem;
     margin-bottom: 6rem;
+    margin-left: 3rem !important;
+    margin-right: 3rem !important;
   }
   .button-accordion-about {
     font-size: 1.2rem !important;
@@ -560,13 +746,27 @@ section.header-image-about {
   }
 }
 // Large Screens Bigger Headers
-@media screen and (min-width: 1000px) and (max-width:1280px) {
-  .header-about {
-    font-family: "Cabin", sans-serif;
-    font-size: 6rem !important;
-  }
-  .header-text-about {
-    font-size: 3rem !important;
+@media all and (min-width: 1000px) and (max-width:1280px) {
+  section.header-image-about {
+    min-height: 50vh !important;
+    background: url("../imgs/aboutus/header1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+    p.header-about {
+      font-size: 5.5rem !important;
+      margin-top: 6rem;
+      margin-bottom: 0rem;
+    }
+
+    p.header-text-about {
+      font-size: 4rem !important;
+      margin-left: 3rem !important;
+      margin-right: 3rem !important;
+      margin-top: 0rem !important;
+      margin-bottom: 4rem;
+    }
   }
   .repeating-h2-about {
     font-size: 2rem !important;
@@ -577,186 +777,5 @@ section.header-image-about {
     font-size: 2.3rem !important;
   }
 }
-//iPhone and mobile devices
-@media screen and (min-width: 320px) and (max-width: 499px) {
-  section.header-image-about {
-    min-height: 60vh;
-    background: url("../imgs/aboutus/header1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
 
-    p.header-about {
-      font-size: 4rem !important;
-      font-weight: 700;
-      margin-top: 1rem;
-      margin-bottom: 0.5rem;
-      line-height: 4.5rem;
-    }
-    p.header-text-about {
-      font-size: 2rem !important;
-      font-weight: 400;
-      margin-left: 2rem;
-      margin-right: 2rem;
-      margin-top: 0rem;
-      margin-bottom: 1rem;
-    }
-  }
-  .repeating-h1-about {
-    font-size: 3.2rem !important;
-    font-weight: bold;
-    margin-top: 3rem;
-  }
-  .repeating-h1-1-about {
-    font-size: 3.5rem !important;
-    font-weight: 700;
-    margin-top: 3rem;
-    margin-left: 4rem;
-    margin-bottom: 3rem;
-    padding-top: 2rem;
-  }
-  .repeating-h2-about {
-    font-size: 1rem !important;
-    margin-top: 1rem !important;
-    margin-bottom: 3rem !important;
-    text-align: center;
-  }
-  .repeating-h2-name {
-    font-size: 1.5rem !important;
-    margin-top: -2.75rem !important;
-    line-height: 3rem !important;
-  } 
-  .repeating-h2-iggy {
-    color: #024a63;
-    padding-top: 4rem;
-    font-family: "Cabin", sans-serif;
-    font-size: 2rem !important;
-    font-weight: 600;
-    margin-top: -3rem !important;
-    margin-bottom: 3rem;
-  }
-  .repeating-h3-iggy {
-    color: #024a63;
-    padding-top: 2rem;
-    padding-bottom: 3rem;
-    font-family: "Cabin", sans-serif;
-    font-size: 1.5rem !important;
-    font-weight: normal;
-    font-style: normal;
-    margin-top: -3rem !important;
-    margin-bottom: 6rem;
-  }
-  .repeating-h3-about {
-    font-size: 0.85rem !important;
-    margin-top: -3.5rem !important;
-    margin-bottom: 0.5rem !important;
-  }
-  .h3-about {
-    padding-top: 0rem;
-    padding-bottom: 1rem !important;
-    margin-top: -3rem !important;
-    font-size: 1.1rem !important;
-    padding-left: 0.8rem;
-  }
-  .h3-description {
-    font-size: 1rem !important;
-    font-weight: normal;
-    font-style: normal;
-  }
-  .repeating-h3-team {
-    color: #024a63;
-    padding-top: 0.4rem;
-    font-family: "Cabin", sans-serif;
-    font-size: 1.3rem !important;
-    font-weight: normal;
-    font-style: normal;
-    margin-top: -2.5rem;
-    margin-bottom: 3rem;
-    padding-left: 1rem;
-  }
-  .button-accordion-about {
-  font-size: 0.6rem !important;
-  padding: 1rem 1rem 1rem 1rem !important;
-  width: 5rem !important;
-  height: 2.2rem !important;
-  outline: none !important;
-  border: 0rem solid white !important;
-  border-radius: 5rem !important;
-  text-align: center;
 
-  margin-top: -5rem !important;
-  margin-bottom: -5rem !important;
-  margin-left: -2rem !important;
-  margin-right: -2rem !important;
-  }
-  .container-about {
-    width: 30rem !important;
-    margin: auto !important;
-  }
-  .container-2 {
-    width: 30rem !important;
-    height: 35rem !important;
-    left: 5px;
-    top: 1618px;
-    text-align: left;
-    background: #ffffff;
-    border: 1px solid #024a63;
-    box-sizing: border-box;
-    margin: auto !important;
-    border-radius: 58px;
-  }
-  .col-sm {
-    width: 75px !important;
-  }
-  .col-md {
-    width: 100px !important;
-  }
-  .rounded-circle-team{
-    margin-left: 0.5rem !important;
-  }
-  .col-4 {
-    display: none !important;
-  }
-  .col-8 {
-    width: 100% !important;
-    height: 100% !important;
-    margin-left: 0.5rem;
-  }
-  .interview {
-    padding: 0rem 2rem !important;
-    margin-top: -6rem !important;
-    margin-left: 3rem !important;
-    font-size: 0.8rem !important;
-    height: 2rem !important;
-  }
-  .bi-instagram {
-    font-size: 1.5rem !important;
-    margin-left: 15rem !important;
-    margin-top: -2.75rem !important;
-  }
-  .bi-facebook {
-    margin-left: 1rem !important;
-    font-size: 1.75rem !important;
-    margin-top: -2.75rem !important;
-  }
-  .h3-description {
-    font-size: 1rem !important;
-    padding-right: 1rem !important;
-    padding-left: 0.5rem !important;
-    margin-bottom: -2rem !important;
-  } 
-  .list {
-    margin-top: -1rem !important;
-  }
-  .il {
-    font-size: 0.9rem !important;
-    line-height: 1.2rem !important;
-    margin-top: 0rem !important;
-    padding-right: 0.1rem;
-    margin-left: -1.1rem;
-  }
-  .rounded {
-    margin-top: 5rem;
-    width: 30% !important;
-  }
-}
