--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -13,7 +13,6 @@ div.col-one {
     font-weight: 700;
     font-size: 4.5rem;
     color: white;
-    position: inherit;
   }
   p.footer-subtitle {
     font-family: "Cabin", sans-serif;
@@ -22,7 +21,7 @@ div.col-one {
     margin-top: 2rem;
     color: white;
     width: 39.3rem;
-    position: inherit;
+  
   }
   .social-icons {
     .instagram {
@@ -30,7 +29,7 @@ div.col-one {
       border-radius: 100%;
       padding: 1.1rem;
       margin-top: 2rem;
-      position: inherit;
+      
     }
     .facebook {
       border: 0.1rem solid white;
@@ -38,7 +37,6 @@ div.col-one {
       padding: 1.1rem 1.8rem;
       margin-left: 1.2rem;
       margin-top: 2rem;
-      position: inherit;
     }
   }
 }
@@ -74,10 +72,9 @@ div.col-four {
     border-radius: 2.4rem;
     width: 12rem;
     height: 3.9rem;
-    position: inherit;
+
   }
   button.footer-join {
-    position: inherit;
     font-family: "Cabin", sans-serif;
     font-size: 2rem;
     font-weight: 600;
@@ -90,430 +87,75 @@ div.col-four {
     height: 3.9rem;
   }
 }
-
-@media (min-width: 320px) {
-  div.main-footer {
-    position: relative;
-    overflow-x: hidden;
-    margin-top: 0rem;
-  }
-  .col-one {
-    h1.footer-title {
-      font-size: 1.8rem;
-      position: absolute;
-      top: 9rem;
-      left: 2rem;
-    }
-    p.footer-subtitle {
-      font-size: 1.4rem;
-      width: 10rem;
-      position: absolute;
-      top: 12rem;
-      left: 2rem;
-    }
-    .social-icons {
-      .instagram {
-        position: absolute;
-        top: 13rem;
-        right: 9rem;
-        padding: 1.1rem;
-      }
-      .facebook {
-        position: absolute;
-        top: 13em;
-        right: 2rem;
-        padding: 1.1rem 1.8rem;
-      }
-    }
-  }
-  p.about-us {
-    display: none;
-  }
-  div.col-three {
-    align-content: flex-end;
-    font-size: 1.4rem;
-    position: absolute;
-    left: 18rem;
-    top: 9rem;
-    padding-left: 0rem;
-  }
-  div.col-four {
-    button.footer-login {
-      position: absolute;
-      top: 3rem;
-      left: 2rem;
-      padding: 0.5rem 2rem;
-      font-size: 1.6rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-    button.footer-join {
-      position: absolute;
-      margin-top: 0rem;
-      top: 3rem;
-      right: 2rem;
-      font-size: 1.6rem;
-      padding: 0.5rem 2rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-  }
+//iPhone
+@media (min-width: 320px) and (max-width: 499px) {
+.col-sm-3 {
+  display: None !important;
 }
-@media (min-width: 375px) {
-  div.main-footer {
-    position: relative;
-    overflow-x: hidden;
-    margin-top: 0rem;
-  }
-  .col-one {
-    h1.footer-title {
-      font-size: 1.8rem;
-      position: absolute;
-      top: 9rem;
-      left: 2rem;
-    }
-    p.footer-subtitle {
-      font-size: 1.4rem;
-      width: 10rem;
-      position: absolute;
-      top: 12rem;
-      left: 2rem;
-    }
-    .social-icons {
-      .instagram {
-        position: absolute;
-        top: 13rem;
-        right: 9rem;
-        padding: 1.1rem;
-      }
-      .facebook {
-        position: absolute;
-        top: 13em;
-        right: 2rem;
-        padding: 1.1rem 1.8rem;
-      }
-    }
-  }
-  p.about-us {
-    display: none;
-  }
-  div.col-three {
-    align-content: flex-end;
-    font-size: 1.4rem;
-    position: absolute;
-    left: 23rem;
-    top: 9rem;
-  }
-  div.col-four {
-    button.footer-login {
-      position: absolute;
-      top: 3rem;
-      left: 2rem;
-      padding: 0.5rem 2rem;
-      font-size: 1.6rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-    button.footer-join {
-      position: absolute;
-      margin-top: 0rem;
-      top: 3rem;
-      right: 2rem;
-      font-size: 1.6rem;
-      padding: 0.5rem 2rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-  }
-}
-@media (min-width: 414px) {
-  div.main-footer {
-    position: relative;
-    overflow-x: hidden;
-    margin-top: 0rem;
-  }
-  .col-one {
-    h1.footer-title {
-      font-size: 1.8rem;
-      position: absolute;
-      top: 8rem;
-      left: 2rem;
-    }
-    p.footer-subtitle {
-      font-size: 1.4rem;
-      width: 10rem;
-      position: absolute;
-      top: 10rem;
-      left: 2rem;
-    }
-    .social-icons {
-      .instagram {
-        position: absolute;
-        top: 14rem;
-        right: 13.5rem;
-        padding: 1.1rem;
-      }
-      .facebook {
-        position: absolute;
-        top: 14rem;
-        right: 2rem;
-        padding: 1.1rem 1.8rem;
-      }
-    }
-  }
-  div.col-three {
-    font-size: 1.8rem;
-    right: 2rem;
-    top: 8rem;
-    display: flex;
-  }
-  div.col-four {
-    button.footer-login {
-      position: absolute;
-      top: 2rem;
-      left: 2rem;
-      padding: 0.5rem 2rem;
-      font-size: 1.6rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-    button.footer-join {
-      position: absolute;
-      margin-top: 0rem;
-      top: 2rem;
-      right: 6.5rem;
-      font-size: 1.6rem;
-      padding: 0.5rem 2rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-  }
-}
-@media (min-width: 500px) {
-  div.main-footer {
-    position: relative;
-    overflow-x: hidden;
-    margin-top: 0rem;
-  }
-  .col-one {
-    h1.footer-title {
-      font-size: 2rem;
-      position: absolute;
-      top: 8rem;
-      left: 2rem;
-    }
-    p.footer-subtitle {
-      font-size: 1.6rem;
-      width: 15rem;
-      position: absolute;
-      top: 11rem;
-      left: 2rem;
-    }
-    .social-icons {
-      .instagram {
-        position: absolute;
-        top: 13rem;
-        right: 13.5rem;
-        padding: 1.1rem;
-      }
-      .facebook {
-        position: absolute;
-        top: 13rem;
-        right: 2rem;
-        padding: 1.1rem 1.8rem;
-      }
-    }
-  }
-  div.col-three {
-    font-size: 1.8rem;
-    left: 32rem;
-    top: 8rem;
-    display: flex;
-  }
-  div.col-four {
-    button.footer-login {
-      position: absolute;
-      top: 2rem;
-      left: 2rem;
-      padding: 0.5rem 2rem;
-      font-size: 1.6rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-    button.footer-join {
-      position: absolute;
-      margin-top: 0rem;
-      top: 2rem;
-      right: 6.5rem;
-      font-size: 1.6rem;
-      padding: 0.5rem 2rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-  }
-}
-@media (min-width: 768px) {
-  div.main-footer {
-    position: relative;
-    height: 25.1rem;
-    padding: 3rem 4rem;
-    margin-top: 0rem;
-    overflow-x: hidden;
-  }
-
-  .col-one {
-    h1.footer-title {
-      position: inherit;
-      font-size: 4rem;
-    }
-    p.footer-subtitle {
-      position: inherit;
-      font-size: 1.6rem;
-      width: 22rem;
-    }
-    .social-icons {
-      .instagram {
-        position: inherit;
-        border: 0.1rem solid white;
-        border-radius: 100%;
-        padding: 1.1rem;
-        margin-top: 2rem;
-      }
-      .facebook {
-        position: inherit;
-        border: 0.1rem solid white;
-        border-radius: 100%;
-        padding: 1.1rem 1.8rem;
-        margin-left: 1.2rem;
-        margin-top: 2rem;
-      }
-    }
-  }
-  div.col-two {
-    p {
-      position: inherit;
-      display: block;
-      justify-content: center;
-      font-size: 1.8rem;
-      margin-left: 5rem;
-    }
-  }
-  div.col-three {
-    position: inherit;
-    font-size: 1.8rem;
+div.col-one {
+  h1.footer-title {
+    font-family: "Cabin", sans-serif;
+    font-weight: 700;
+    font-size: 3rem !important;
     color: white;
-    display: flex;
-    justify-content: center;
   }
-  div.col-four {
-    align-content: flex-end;
-    button.footer-login {
-      font-size: 1.8rem;
-      padding: 0.5rem 2rem;
-      position: inherit;
-    }
-    button.footer-join {
-      position: inherit;
-
-      font-size: 1.8rem;
-      font-weight: 600;
-      padding: 0.5rem 2rem;
-      margin-top: 1.8rem;
-    }
-  }
-}
-
-@media (min-width: 1280px) {
-  div.main-footer {
-    overflow-y: hidden;
-    position: inherit;
-    background-color: #024a63;
-    height: 24rem;
-    width: 100%;
-    padding: 4rem 5rem;
-    margin-top: 0rem;
-  }
-  div.col-one {
-    h1.footer-title {
-      font-family: "Cabin", sans-serif;
-      font-weight: 700;
-      font-size: 4.5rem;
-      color: white;
-      position: inherit;
-    }
-    p.footer-subtitle {
-      font-family: "Cabin", sans-serif;
-      font-weight: 400;
-      font-size: 1.8rem;
-      margin-top: 2rem;
-      color: white;
-      width: 39.3rem;
-      position: inherit;
-    }
-    .social-icons {
-      .instagram {
-        border: 0.1rem solid white;
-        border-radius: 100%;
-        padding: 1.1rem;
-        margin-top: 2rem;
-        position: inherit;
-      }
-      .facebook {
-        border: 0.1rem solid white;
-        border-radius: 100%;
-        padding: 1.1rem 1.8rem;
-        margin-left: 1.2rem;
-        margin-top: 2rem;
-        position: inherit;
-      }
-    }
-  }
-  div.col-two {
-    p {
-      position: inherit;
-      display: block;
-      justify-content: center;
-      font-family: "Cabin", sans-serif;
-      font-weight: 400;
-      font-size: 1.8rem;
-      color: white;
-    }
-  }
-  div.col-three {
-    position: inherit;
+  p.footer-subtitle {
     font-family: "Cabin", sans-serif;
     font-weight: 400;
-    font-size: 1.8rem;
+    font-size: 1.5rem !important;
+    margin-top: 2rem;
     color: white;
-    display: flex;
-    justify-content: center;
+    width: 39.3rem;
   }
-  div.col-four {
-    align-content: flex-end;
-    button.footer-login {
-      font-size: 2rem;
-      font-weight: 600;
-      font-family: "Cabin", sans-serif;
-      padding: 0.5rem 2rem;
-      background: white;
-      color: #024a63;
-      border-radius: 2.4rem;
-      width: 12rem;
-      height: 3.9rem;
-      position: inherit;
+  .instagram {
+    border: 0.1rem solid white;
+    border-radius: 100%;
+    padding: 1.1rem !important;
+    margin-top: 4rem !important;
+    margin-right: 17rem !important;
+    //font-size: 4rem !important;
+    width: 3.5rem !important;
     }
-    button.footer-join {
-      position: inherit;
-      font-family: "Cabin", sans-serif;
-      font-size: 2rem;
-      font-weight: 600;
-      color: white;
-      background: #ff7c5c;
-      padding: 0.5rem 2rem;
-      margin-top: 1.8rem;
-      border-radius: 2.4rem;
-      width: 12rem;
-      height: 3.9rem;
+    .facebook {
+      border: 0.1rem solid white;
+      border-radius: 100%;
+      padding: 1.1rem !important;
+      margin-left: -1rem !important;
+      margin-right: 20rem !important;
+      margin-top: 4rem !important;
+      width: 3rem !important;
     }
+  .footer-login {
+    font-size: 1.5rem !important;
+    font-weight: 600;
+    font-family: "Cabin", sans-serif;
+    padding: 0.5rem 2rem;
+    background: white;
+    color: #024a63;
+    border-radius: 2.4rem;
+    width: 8rem !important;
+    height: 3rem !important;
+  }
+  .footer-join {
+    font-family: "Cabin", sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    color: white;
+    background: #ff7c5c;
+    padding: 0.5rem 2rem;
+    margin-top: 1.8rem;
+    border-radius: 2.4rem;
+    width: 8rem !important;
+    height: 3rem !important;
+  }
+}
+}
+
+@media (min-width: 350px) and (max-width:499px) {
+  .instagram{
+    margin-right: 20rem !important;
+  }
+  .facebook {
+    margin-left: 23rem !important;
   }
 }
