--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -1,274 +1,4 @@
-.card {
-  border: none;
-}
-section.header-image-about {
-  min-height: 50vh;
-  background: url("../imgs/aboutus/header1.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
 
-p.header-about {
-  font-family: "Cabin", sans-serif;
-  font-size: 5.5rem;
-  font-weight: 700;
-  margin-top: 9.2rem;
-}
-
-p.header-text-about {
-  font-family: "Cabin", sans-serif;
-  font-size: 4rem;
-  font-weight: 400;
-  padding: 2.8rem 8rem 11.3rem 8rem;
-}
-.learn-how-about {
-  padding: 0.5rem 3.5rem;
-  margin-top: -2rem;
-  background: #ff7c5c;
-  border: 0rem solid white;
-  color: white;
-  font-size: 2rem;
-  font-weight: 600;
-  border-radius: 4.3rem;
-  font-family: "Cabin", sans-serif;
-}
-.repeating-h1-about {
-  color: #024a63;
-  font-family: "Cabin", sans-serif;
-  font-size: 4.5rem;
-  font-weight: bold;
-  margin-top: 3rem;
-  margin-bottom: 2rem;
-}
-.repeating-h2-about {
-  color: #024a63;
-  font-family: "Cabin", sans-serif;
-  font-size: 2.4rem;
-  font-weight: bold !important;
-  margin-top: 0rem;
-  margin-bottom: 2rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-.repeating-h2-name {
-  color: #024a63;
-  padding-top: 4rem;
-  padding-left: 1rem;
-  font-family: "Cabin", sans-serif;
-  font-size: 2.5rem;
-  font-weight: 400;
-  margin-top: 0rem;
-  line-height: 3.5rem;
-  margin-bottom: 2rem;
-}
-.repeating-h3-about {
-  color: #024a63;
-  font-family: "Cabin", sans-serif;
-  font-size: 2rem;
-  margin-top: -2.5rem;
-  font-weight: 400;
-  line-height: 3.5rem;
-  margin-bottom: 3rem;
-}
-.repeating-h1-1-about {
-  color: #024a63;
-  font-family: "Cabin", sans-serif;
-  font-size: 5rem;
-  font-weight: 700;
-  margin-top: 3rem;
-  margin-left: 4rem;
-  margin-bottom: 3rem;
-  padding-top: 2rem;
-}
-.h3-about {
-  padding-top: 0rem;
-  padding-bottom: 2rem;
-  margin-top: -1.5rem;
-  font-family: Cabin;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 2.2rem;
-  line-height: 36px;
-  display: flex;
-  align-items: center;
-
-  color: #024a63;
-}
-.repeating-h3-team {
-  color: #024a63;
-  padding-top: 0.4rem;
-  font-family: "Cabin", sans-serif;
-  font-size: 2rem;
-  font-weight: normal;
-  font-style: normal;
-  margin-top: -2.5rem;
-  margin-bottom: 3rem;
-  padding-left: 1rem;
-}
-.h3-description {
-  color: #024a63;
-  padding-top: 2rem;
-  padding-bottom: 3rem;
-  padding-left: 1.5rem;
-  padding-right: 1rem;
-  font-family: "Cabin", sans-serif;
-  font-size: 1.5rem;
-  font-weight: normal;
-  font-style: normal;
-  margin-top: -2.5rem;
-  margin-bottom: -4rem;
-}
-.h4 {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 0.7rem;
-  padding-top: 1rem;
-  font-style: italic;
-  text-align: center;
-  color: #024a63;
-}
-
-.container-about {
-  margin-top: 2rem;
-  margin-left: 16rem;
-  margin-right: 16rem;
-  background: #bededf;
-  border-radius: 7rem;
-}
-.ambasadors {
-  background: #bededf;
-  border-radius: 10.3rem;
-}
-
-.accordion-about {
-  margin-bottom: 3.2rem;
-  margin-top: -1rem;
-}
-
-.accordion-body-about {
-  font-family: "Raleway", sans-serif;
-  font-size: 2.3rem;
-  font-weight: 500;
-}
-.button-accordion-about {
-  font-family: "Cabin", sans-serif;
-  font-size: 1.3rem;
-  font-weight: 300;
-  padding: 1rem 3rem 1rem 3rem;
-  outline: none;
-  background: #ff7c5c;
-  border: 0rem solid white;
-  border-radius: 4.3rem;
-  color: white;
-  width: 13rem;
-  height: 4rem;
-
-  margin-top: -5rem;
-  margin-bottom: -3rem;
-  margin-left: -3rem;
-  margin-right: -3rem;
-}
-.container-2 {
-  width: 80rem;
-  height: 50rem;
-  left: 55px;
-  top: 1618px;
-
-  background: #ffffff;
-  border: 1px solid #024a63;
-  box-sizing: border-box;
-  margin-left: 15rem;
-  border-radius: 58px;
-}
-
-.col-8 {
-  width: 781px;
-  height: 168px;
-  left: 549px;
-  top: 1796px;
-
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 18px;
-
-  color: #024a63;
-}
-
-.rounded-circle-am {
-  padding-top: 7rem;
-  padding-left: 3rem;
-  width: 35rem;
-  overflow: hidden;
-  margin-bottom: 2rem;
-}
-
-.interview {
-  padding: 1.1rem 2rem;
-  margin-top: 3rem;
-  background: #ff7c5c;
-  border: 0rem solid white;
-  color: white;
-  font-size: 1.5rem;
-  font-weight: 600;
-  border-radius: 4.3rem;
-  font-family: "Cabin", sans-serif;
-}
-
-.bi-instagram {
-  margin-top: -5rem;
-  font-size: 2.5rem;
-  padding-top: 0.8rem;
-}
-.bi-facebook {
-  margin-top: -5rem;
-  margin-left: 2rem;
-  padding-top: 0.8rem;
-  font-size: 2.5rem;
-}
-.ul {
-  margin-top: -2rem !important;
-}
-.il {
-  font-size: 1.75rem;
-  line-height: 1.6rem;
-  margin-top: 0.6rem;
-}
-
-.rounded {
-  margin-top: 5rem;
-  width: 20%;
-}
-.rounded-circle-team {
-  margin-left: -0.5rem !important;
-}
-.repeating-h2-iggy {
-  color: #024a63;
-  padding-top: 4rem;
-  font-family: "Cabin", sans-serif;
-  font-size: 2.5rem;
-  font-weight: 600;
-  margin-top: -2.5rem;
-  margin-bottom: 3rem;
-}
-.repeating-h3-iggy {
-  color: #024a63;
-  padding-top: 2rem;
-  padding-bottom: 3rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  font-family: "Cabin", sans-serif;
-  font-size: 2.2rem;
-  font-weight: normal;
-  font-style: normal;
-  margin-top: -2.5rem;
-  margin-bottom: 0.5rem !important;
-  margin-left: 12%;
-  margin-right: 12%;
-}
 //iPhone and mobile devices
 @media all and (min-width: 280px) and (max-width: 499px) {
   section.header-image-about {
@@ -648,9 +378,10 @@ p.header-text-about {
     margin-top: 5rem;
     width: 30% !important;
   }
+  
 }
 //Large Screens: Ipad Pro and Desktop
-@media screen and (min-width: 769px) and (max-width: 1600px) {
+@media screen and (min-width: 769px) and (max-width: 2200px) {
   section.header-image-about {
     min-height: 50vh !important;
     background: url("../imgs/aboutus/header1.png");
@@ -658,7 +389,7 @@ p.header-text-about {
     background-size: cover;
     background-position: center;
     p.header-about {
-      font-size: 5.5rem !important;
+      font-size: 5.5 !important;
       margin-top: 6rem !important;
       margin-bottom: 0rem;
     }
@@ -704,6 +435,14 @@ p.header-text-about {
   }
   .rounded-circle-team {
     margin-left: -0.25rem !important;
+  }
+  .rounded-circle-am {
+    width: 85% !important;
+    margin-top: 4rem;
+  }
+  .col-8 {
+    margin-right: 0rem;
+    margin-left: -2rem;
   }
   //Learn More Container
   .container-about {
